# rust-template-rs

./: README.md  cargo-generate.toml
CLI/: .gitignore  Cargo.toml  README.md  cargo-generate.toml  final-msg.rhai
CLI/src/: args.rs  log.rs  main.rs
Projects/: cargo-generate.toml
Projects/CLI/: .gitignore  Cargo.toml  README.md  cargo-generate.toml
Projects/CLI/src/: main.rs
Projects/Cli/: Cargo.toml  cargo-generate.toml
Projects/Cli/src/: main.rs
Projects/Lib/: Cargo.toml  README.md  cargo-generate.toml
Projects/Lib/Examples/: .keep_me
Projects/Lib/src/: lib.rs
Projects/Lib/tests/: .keep_me  itest.rs
Snippets/: cargo-generate.toml
Snippets.../: cargo-generate.toml
Snippets.../Changelog-and-licenses/: CONTRIBUTING.md  cargo-generate.toml
Snippets.../Github Specific/audit-workflow/.github/workflows/: {{project-name}}.yml
Snippets.../Github Specific/cd-workflow/: cargo-generate.toml
Snippets.../Github Specific/cd-workflow/.github/workflows/: {{project-name}}.yml
Snippets.../Github Specific/ci-workflow/.github/workflows/: {{project-name}}.yml
Snippets.../Github Specific/dependabot-config/.github/: dependabot.yml
Snippets.../Github Specific/issue-templates/: cargo-generate.toml
Snippets.../Github Specific/issue-templates/.github/: PULL_REQUEST_TEMPLATE.md
Snippets.../StateMachine/: {{project-name}}.rs
Snippets/ASync-StateMachine/{{crate_name}}/: mod.rs
Snippets/ASync-StateMachine/{{crate_name}}/states/: after.rs  before.rs  inside.rs  mod.rs
Snippets/Github Specific/: cargo-generate.toml
Snippets/Sync-StateMachine/: cargo-generate.toml  pre-script.rhai
Snippets/Sync-StateMachine/{{crate_name}}/: mod.rs
Snippets/Sync-StateMachine/{{crate_name}}/states/: before.rs  mod.rs
lib/: .gitignore  Cargo.toml  README.md  cargo-generate.toml  final-msg.rhai
lib/src/: lib.rs
lib/tests/: itest.rs
