[workspace]
resolver = "2"
members = []

[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]
readme = "README.md"
# license = "MIT"  # https://spdx.org/licenses/
# categories = [] # https://crates.io/category_slugs
# keywords = [] # free text

# https://doc.rust-lang.org/cargo/reference/manifest.html

{% if use_tokio %}[features]
default = []
tokio-console = ["console-subscriber", "tokio/tracing"]

{% endif %}[dependencies]
anyhow = "~1.0"
clap = { version = "~3.1", features = ["derive"] }
tracing-subscriber = { version = "~0.3" }
tracing = "~0.1"{% if use_tokio %}

tracing-futures = "~0.2"
tokio = { version = "~1.19", features = ["full"] }
console-subscriber = { version = "~0.1", optional = true }

[dev-dependencies]
tokio = { version = "~1.19", features = ["test-util", "macros"] }
tokio-test = "~0.4"
{% endif %}