{% if within_cargo_project==false %}[workspace]
resolver = "2"
members = []

{% endif %}[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
readme = "README.md"
description = """
Short description goes here.
"""
license = "MIT OR Apache-2.0"
{% if within_cargo_project==false %}repository = "https://github.com/USERNAME/{{project-name}}"
documentation = "https://docs.rs/{{project-name}}"
keywords = []
categories = []
{% endif %}edition = "2021"{% if within_cargo_project %}
resolver = "2"{% endif %}
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

{% if use_tokio %}[features]
default = []
tokio-console = ["console-subscriber", "tokio/tracing"]

{% endif %}[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["derive"] }
tracing-subscriber = { version = "0.3" }
tracing = "0.1"{% if use_tokio %}

tokio = { version = "1.19", features = ["full"] }
console-subscriber = { version = "0.1", optional = true }
tracing-futures = "0.2"

[dev-dependencies]
tokio = { version = "1.19", features = ["test-util", "macros"] }
tokio-test = "0.4"
{% endif %}