[package]
name = "{{project-name}}"
description = "TODO: short description of the crate here"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["{{authors}}"]
# license = "MIT"  # https://spdx.org/licenses/
# repository = "TODO: https://github.com/..."
# categories = [] # https://crates.io/category_slugs
# keywords = [] # free text

# https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dependencies]
tracing = { version = "~0.1", default = false, features = ["attributes"] }

[dev-dependencies]
anyhow = "~1.0"
tracing-subscriber = { version = "~0.3" }
tokio = { version = "~1.19", features = ["test-util", "macros"] }
tokio-test = "~0.4"
