[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
readme = "README.md"
description = """
Short description goes here.
"""
license = "MIT OR Apache-2.0"
{% if within_cargo_project==false %}repository = "https://github.com/USERNAME/{{project-name}}"
documentation = "https://docs.rs/{{project-name}}"
keywords = []
categories = []
{% endif %}edition = "2021"{% if within_cargo_project %}
resolver = "2"{% endif %}
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dependencies]
tracing = { version = "0.1", default = false, features = ["attributes"] }

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1.19", features = ["test-util", "macros"] }
tokio-test = "0.4"
tracing-subscriber = { version = "0.3" }
