{% if within_cargo_project==false %}[workspace]
resolver = "2"
members = []

{% endif %}[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
readme = "README.md"
description = """
Short description goes here.
"""
{% if within_cargo_project %}resolver = "2"
{% endif %}edition = "2021"
#license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

{% if tokio %}[features]
default = []
tokio-console = ["console-subscriber", "tokio/tracing"]

{% endif %}[dependencies]
clap = { version = "3.2", features = ["derive"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = "0.3"
{% if tokio %}tracing-futures = "0.2"
tokio = { version = "1.19", features = ["full"] }
console-subscriber = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1.19", features = ["test-util", "macros"] }
tokio-test = "0.4"
{% endif %}