{% if within_cargo_project==false %}[workspace]
resolver = "2"
members = []

{% endif %}[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
readme = "README.md"
description = """
Short description goes here.
"""
{% if within_cargo_project %}resolver = "2"
{% endif %}edition = "2021"
#license = "MIT OR Apache-2.0"
#repository = "https://github.com/USERNAME/{{project-name}}"
#documentation = "https://docs.rs/{{project-name}}"
#keywords = []
#categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dependencies]
tracing = { version = "0.1", default = false, features = ["attributes"] }

[dev-dependencies]
tracing-subscriber = "0.3"
{% if tokio %}tokio = { version = "1.19", features = ["test-util", "macros"] }
tokio-test = "0.4"{% endif %}
