{% if within_cargo_project==false -%}

[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
readme = "README.md"
description = """
Short description goes here.
"""
edition = "2021"
#license = "MIT OR Apache-2.0"
#repository = "https://github.com/USERNAME/{{project-name}}"
#documentation = "https://docs.rs/{{project-name}}"
#keywords = []
#categories = []

[features]
default = ["std"]
std = ["tracing/std"]

[dependencies]
derive_more = "0.99"
tracing = { version = "0.1", default-features = false, features = ["attributes"] }

{% if tokio -%}
futures = "0.3"
tracing-futures = { version = "0.2", default-features = false, features = ["tokio"] }
tokio = { version = "1.37", features = ["full"] }
#tokio-util = { version = "0.7", features = ["full"] }
#tokio-stream = { version = "0.1", features = ["full"] }

{% endif -%}

[dev-dependencies]
test-log = "0.2"

{% if tokio -%}
tokio = { version = "1.37", features = ["test-util", "macros"] }
tokio-test = "0.4"

{% endif -%}

[lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
unwrap_in_result = "deny"
expect_used = "warn"
expect_in_result = "warn"

{% else -%}

[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
readme = "README.md"
description = """
Short description goes here.
"""
resolver = "2"
edition = "2021"
#license = "MIT OR Apache-2.0"
#repository = "https://github.com/USERNAME/{{project-name}}"
#documentation = "https://docs.rs/{{project-name}}"
#keywords = []
#categories = []

[features]
default = ["std"]
std = ["tracing/std"]

[dependencies]
derive_more.workspace = true
tracing.workspace = true

{% if tokio -%}
futures.workspace = true
tokio.workspace = true
tracing-futures.workspace = true

{% endif -%}

[dev-dependencies]
test-log.workspace = true

{%- if tokio %}
tokio = { workspace = true, features = ["test-util", "macros"] }
tokio-test.workspace = true

{% endif -%}

[lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "deny"
missing_docs = "warn"

[lints.clippy]
undocumented_unsafe_blocks = "forbid"
unwrap_used = "deny"
unwrap_in_result = "deny"
expect_used = "warn"
expect_in_result = "warn"

{% endif -%}
